--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/preciojustodb
+spring.datasource.username=root
+spring.datasource.password=peludita95
 
+#create, create-drop, validate, update
+spring.jpa.hibernate.ddl-auto=validate
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
