--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/preciojustodb
-spring.datasource.url=jdbc:mysql://${PROD_DB_HOST}/${PROD_DB_NAME}
-spring.datasource.username=${PROD_DB_USERNAME}
-spring.datasource.password=${PROD_DB_PASSWORD}	
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/preciojustodb
+#spring.datasource.url=jdbc:mysql://${PROD_DB_HOST}/${PROD_DB_NAME}
+spring.datasource.username=root
+spring.datasource.password=peludita95	
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 
 #create, create-drop, validate, update
-spring.jpa.hibernate.ddl-auto=CREATE
+spring.jpa.hibernate.ddl-auto=UPDATE
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
