--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,13 @@ dependencies {
  	implementation 'org.springframework.boot:spring-boot-starter-web'
    	implementation 'io.jsonwebtoken:jjwt:0.9.1'
    	implementation 'org.springframework.boot:spring-boot-starter-security'
-  	//runtimeOnly 'org.postgresql:postgresql'//conecta al psql remoto
   	runtimeOnly 'com.mysql:mysql-connector-j'//conecta al sql local
+  	//runtimeOnly 'org.postgresql:postgresql'//conecta al psql remoto
    	//testImplementation "org.mockito:mockito-core:3.+"
  	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
  	//testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+// tasks.named('test') {
+//	 useJUnitPlatform()
+// }
